# ai-coderag

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  clippy.toml  coderag.example.toml  deny.toml  lefthook.yaml
.cargo/: audit.toml  config.toml
.claude/skills/agentdoc/: SKILL.md
.config/: cliff.toml  release.toml
.github/workflows/: ci.yml  pr-check.yml  release.yml
docs/: agent-overlay.md
docs/.agentdoc/: claims.yml
src/: chunker.rs  config.rs  domain.rs  error.rs  lib.rs  main.rs  traits.rs
src/embed/: jina_model.rs  mod.rs
src/lsp/: mod.rs
src/parser/: cpp.rs  mod.rs  rust.rs
src/store/: mod.rs
tests/: integration_test.rs
tests/fixtures/mini-cpp/: config.cpp  io.cpp  io.h
tests/fixtures/mini-rust/: Cargo.toml
tests/fixtures/mini-rust/src/: config.rs  io.rs  main.rs  processor.rs
