[package]
name = "coderag"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
fastembed = "5.16.0"
futures = "0.3.32"
hex = "0.4.3"
ignore = "0.4.26"
lancedb = "0.30.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tree-sitter = "0.26.9"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
