[package]
name = "coderag"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
async-trait = "0.1.89"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
hex = "0.4.3"
hf-hub = { version = "0.5.0", features = ["tokio"] }
ignore = "0.4.26"
lancedb = "0.30.0"
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tree-sitter = "0.26.9"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.2"
url = "2.5.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full", "test-util"] }
